--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
             <span>HOME</span>
         </div>
         <div>
-            <span>WEB</span>
+            <span>CHAT</span>
         </div>
         <div>
             <span>MOBILE</span>
