--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,5 +1,38 @@
-.chat_wrap .header { font-size:14px; padding:15px 0; background:#F18C7E; color:white; text-align:center; }
+.chat_wrap .input-div { bottom:0; width:100%; text-align:right; }
 
-.chat_wrap .input-div { position:fixed; bottom:0; width:100%; background-color:#FFF; text-align:right;}
+.chat_wrap .input-div > textarea { width:30%; height:80px; border:none; padding:10px; border:1px solid #F18C7E; }
 
-.chat_wrap .input-div > textarea { width:30%; height:80px; border:none; padding:10px; border:1px solid #F18C7E;}
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+/* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Pretendard, 'Malgun Gothic', sans-serif;
+}
+
+.dropBox {
+  width: 90vw;
+  height: 80vh;
+
+  margin: .6rem;
+  overflow: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 5px;
+  border: 4px dashed #ddd;
+  user-select: none;
+  transition: 0.4s;
+}
+
+ 드롭 반응
+.dropBox.active {
+  background: #ddd;
+}
+
+.dropBox h1 {
+  font-size: 1.8rem;
+}*/
