--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,8 +1,6 @@
-.chat_wrap .input-div { bottom:0; width:100%; text-align:right; }
+/*.chat_wrap .input-div { bottom:0; width:100%; text-align:right; }
 
-.chat_wrap .input-div > textarea { width:30%; height:80px; border:none; padding:10px; border:1px solid #F18C7E; }
-
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+.chat_wrap .input-div > textarea { width:100%; height:80px; border:none; padding:10px; border:1px solid #F18C7E; }*/
 
 /* {
   margin: 0;
