--- a/chatapp/templates/chat.html
+++ b/chatapp/templates/chat.html
@@ -66,20 +66,12 @@
             {% endif %}
         {% endfor %}
     {% endfor %}
-    <input name="file_test" id="chat_test2" type="file" multiple>
-    <form action="{% url 'chatapp:chat' pk=chat_pk %}" id="chat_data" method="post" enctype="multipart/form-data">
+    <form style="height:50rem; background:#00FF00;" action="{% url 'chatapp:chat' pk=chat_pk %}" id="chat_data" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <div>
-            <label style="width:100vw; height:100vh; background:#FF0000;" for="chat_test2">
-                <div class="chat_wrap">
-                    <div class="input-div">
-                        <textarea id="chat_send" name="chat_text" placeholder="PressEnterforsendmessage."></textarea>
-                    </div>
-                </div>
-            </label>
-        </div>
+        <input style="width:100%; height:100%; background:#A6A6A6" name="file_test" id="chat_test2" type="file" multiple>
+            <textarea id="chat_send" name="chat_text" placeholder="PressEnterforsendmessage."></textarea>
+        </input>
     </form>
-
     <script type="text/javascript" src="{% static 'js/chat.js' %}"></script>
 </body>
 </html>
