--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,128 +1,19 @@
-/*.chat_wrap .input-div { bottom:0; width:100%; text-align:right; }
 
-.chat_wrap .input-div > textarea { width:100%; height:80px; border:none; padding:10px; border:1px solid #F18C7E; }*/
-
-/* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Pretendard, 'Malgun Gothic', sans-serif;
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+#chat_file {
+    opacity:0;
 }
 
-.dropBox {
-  width: 90vw;
-  height: 80vh;
-
-  margin: .6rem;
-  overflow: auto;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border-radius: 5px;
-  border: 4px dashed #ddd;
-  user-select: none;
-  transition: 0.4s;
+#chat_send {
+    width:100%;
+    height:10rem;
+    border:none;
+    border-top-style:solid;
 }
 
- 드롭 반응
-.dropBox.active {
-  background: #ddd;
-}
-
-.dropBox h1 {
-  font-size: 1.8rem;
-}*/
-
-h3, p {
-  text-align: center;
-}
-
-.form-group {
-  margin: 30px;
-}
-
-.file-upload .form-control {
-  height: 150px;
-  outline: 1px dashed #ccc;
-  outline-offset: -15px;
-  background-color: #eee;
-}
-.file-upload .form-control:before {
-  content: "\f093";
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: 3em;
-  left: 0;
-  right: 0;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-}
-.file-upload .form-control:after {
-  content: attr(data-message);
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  display: block;
-}
-.file-upload .form-control input[type="file"] {
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
-body.dragged .file-upload .form-control input[type="file"] {
+body.dragged .drop_data input[type="file"] {
   /* Make sure it is full screen, whatever the position absolute container */
-  position: absolute;
-  top: 50vh;
-  bottom: 50vh;
-  left: 50vw;
-  right: 50vw;
-  height: 200vh;
-  width: 200vw;
-  z-index: 10002;
-}
-
-body:after {
-  content: 'You can drop the file. :-)';
-  font-size: 2em;
-  text-align: center;
-  line-height: 100vh;
-  position: absolute;
-  top: 10px;
-  bottom: 10px;
-  left: 10px;
-  right: 10px;
-  background-color: #eee;
-  z-index: 10000;
-  border-radius: 4px;
-  border: thin solid #ccc;
-  visibility: hidden;
-  transition: visibility 0s, opacity 0.5s ease;
-}
-
-body.dragged:after {
-  opacity: 1;
-  visibility: visible;
-}
-
-/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
-.file-label {
-  margin-top: 30px;
-  background-color: #5b975b;
-  color: #fff;
-  text-align: center;
-  width: 50rem;
-  height:50rem;
-  border-radius: 6px;
-  cursor: pointer;
-}
-.file {
-  display: none;
+  position:fixed;
+  height:100vh;
+  width:100vw;
 }
