--- a/chatapp/templates/chat.html
+++ b/chatapp/templates/chat.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <!-- oncontextmenu="return false" ondrag="return false" ondragend="return false" ondragenter="return false" ondragleave="return false" ondragover="return false" ondragstart="return false" onselectstart="return false" -->
 <body>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/chat.css' %}">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <form action="{% url 'chatapp:chat' pk=chat_pk %}" class="drop_data" id="chat_data" method="post" enctype="multipart/form-data">
@@ -25,26 +24,15 @@
                     <div align="right">
                         {{ delete_queryset.send_user }}
                         <p></p>
-                        <div class="chat_box">
-                            {{ delete_queryset.chat_line }}
-                        </div>
                         {% if delete_queryset.chat_img %}
-                            <p></p>
-                            {% if delete_queryset.chat_img_ext == '.png' or delete_queryset.chat_img_ext == '.GIF' or delete_queryset.chat_img_ext == '.jpg' %}
-                                <a href="{{ delete_queryset.chat_img.url }}" download>
-                                    <img src="{{ delete_queryset.chat_img.url }}" width="300" height="300" style="border-radius: 20px;">
-                                </a>
-                            {% endif %}
-                            {% if delete_queryset.chat_img_ext == '.mp4' or delete_queryset.chat_img_ext == '.webm' or delete_queryset.chat_img_ext == '.avi' or delete_queryset.chat_img_ext == '.wmv' %}
-                                <video src="{{ delete_queryset.chat_img.url }}" controls width="300" height="300" style="border-radius: 20px;">
-                            {% endif %}
-                            {% if delete_queryset.chat_img_ext == '.mp3' or delete_queryset.chat_img_ext == '.flac' or delete_queryset.chat_img_ext == '.wav' %}
-                                <audio src="{{ delete_queryset.chat_img.url }}" controls width="300" height="300" style="border-radius: 20px;">
-                            {% endif %}
-                            <p></p>
-                            {{ delete_queryset.chat_time }}
-                            <p></p>
+                            <div class="file_box">
+                                <div class="file_name">
+                                    {{ delete_queryset.chat_img_name }}
+                                </div>
+                            </div>
                         {% else %}
+                            {{ delete_queryset.chat_line }}
+                            <p></p>
                             {{ delete_queryset.chat_time }}
                             <p></p>
                         {% endif %}
@@ -53,24 +41,16 @@
                     <div align="left">
                         {{ delete_queryset.send_user }}
                         <p></p>
-                        <div class="chat_box">
-                            {{ delete_queryset.chat_line }}
-                        </div>
                         {% if delete_queryset.chat_img %}
-                            <p></p>
-                            {% if delete_queryset.chat_img_ext == '.png' or delete_queryset.chat_img_ext == '.GIF' or delete_queryset.chat_img_ext == '.jpg' %}
-                                <a href="{{ delete_queryset.chat_img.url }}" download>
-                                    <img src="{{ delete_queryset.chat_img.url }}" width="300" height="300" style="border-radius: 20px;">
-                                </a>
-                            {% endif %}
-                            {% if delete_queryset.chat_img_ext == '.mp4' or delete_queryset.chat_img_ext == '.webm' or delete_queryset.chat_img_ext == '.avi' or delete_queryset.chat_img_ext == '.wmv' %}
-                                <video src="{{ delete_queryset.chat_img.url }}" controls width="300" height="300" style="border-radius: 20px;">
-                            {% endif %}
-                            {% if delete_queryset.chat_img_ext == '.mp3' or delete_queryset.chat_img_ext == '.flac' or delete_queryset.chat_img_ext == '.wav' %}
-                                <audio src="{{ delete_queryset.chat_img.url }}" controls width="300" height="300" style="border-radius: 20px;">
-                            {% endif %}
+                            <div class="file_box">
+                                <div>
+                                    {{ delete_queryset.chat_img_name }}
+                                </div>
+                            </div>
                             {{ delete_queryset.chat_time }}
                         {% else %}
+                            {{ delete_queryset.chat_line }}
+                            <p></p>
                             {{ delete_queryset.chat_time }}
                             <p></p>
                         {% endif %}
