--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -17,3 +17,19 @@ body.dragged .drop_data input[type="file"] {
   height:100vh;
   width:100vw;
 }
+
+.file_box {
+    width:20rem;
+    height:10rem;
+    background:#00FF00;
+}
+
+.file_name {
+  color: white;
+  background-color: green;
+  width: 200px;
+  height: 30px;
+  padding: 20px;
+  border: 5px dashed black;
+  margin: 15px;
+}
