--- a/mainapp/templates/main.html
+++ b/mainapp/templates/main.html
@@ -8,4 +8,7 @@
             <img src="{% static 'main/mainbg.jpg' %}" alt="" style="width:80rem; height:50rem;">
         </div>
     </div>
+    <h1>
+        움직이는 이미지
+    </h1>
 {% endblock %}
