--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8"/>
     <title>Chat Rooms</title>
 </head>
-
 <body>
-    What chat room would you like to enter?<br/>
-    <input id="room-name-input" type="text" size="100"/><br/>
-    <input id="room-name-submit" type="button" value="Enter"/>
+    What chat room would you like to enter?<br>
+    <input id="room-name-input" type="text" size="100"><br>
+    <input id="room-name-submit" type="button" value="Enter">
 
     <script>
         document.querySelector('#room-name-input').focus();
@@ -21,7 +20,7 @@
 
         document.querySelector('#room-name-submit').onclick = function(e) {
             var roomName = document.querySelector('#room-name-input').value;
-            window.location.pathname = '/chat/' + roomName + '/';
+            window.location.pathname = '/chat_test/' + roomName + '/';
         };
     </script>
 </body>
