--- a/chat/templates/room2.html
+++ b/chat/templates/room2.html
@@ -1,35 +1,22 @@
 <!-- chat/templates/chat/room.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
     <title>Chat Room</title>
 </head>
-<body style="background:#B2CCFF;">
-    <div align="center">
-        <h1>채팅창</h1>
-    </div>
+<script src="{% static 'js/reconnecting-websocket.js' %}"></script>
 
-
+<body>
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
     {{ room_name|json_script:"room-name" }}
-    <div class="chat_menu">
-        <label style="text-align:center; border-right:1px solid #FFFFFF;">
-            연결
-        </label>
-        <label style="text-align:center; border-right:1px solid #FFFFFF;">
-            나가기
-        </label>
-        <label style="text-align:center;">
-            파일 전송
-        </label>
-    </div>
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
-        const chatSocket = new WebSocket(
+        const chatSocket = new ReconnectingWebSocket(
             'ws://'
             + window.location.host
             + '/ws/chat_test/'
@@ -57,7 +44,8 @@
             const messageInputDom = document.querySelector('#chat-message-input');
             const message = messageInputDom.value;
             chatSocket.send(JSON.stringify({
-                'message': message
+                'message': message,
+                'command': 'new_message'
             }));
             messageInputDom.value = '';
         };
