--- a/chat/templates/room.html
+++ b/chat/templates/room.html
@@ -45,7 +45,7 @@
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/chat_test/'
+            + '/ws/chat_test/play/'
             + roomName
             + '/'
         );
